fixes to projects page on mobile

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -130,6 +130,8 @@ a {
         flex-direction: column !important;
         justify-content: center;
         height: unset;
+        position: absolute;
+        top: 7.5vh;
     }
 
     .websites div {
